crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_codes_trailing_comment.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: directive
---
Ok(
    Some(
        NoqaLexerOutput {
            warnings: [],
            directive: Codes(
                Codes {
                    range: 0..18,
                    codes: [
                        Code {
                            code: "F401",
                            range: 8..12,
                        },
                        Code {
                            code: "F841",
                            range: 14..18,
                        },
                    ],
                },
            ),
        },
    ),
)
