crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_empty_comma.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: directive
---
Ok(
    Some(
        ParsedNoqa {
            warnings: [
                MissingItem(
                    13..13,
                ),
            ],
            directive: Codes(
                Codes {
                    range: 0..18,
                    codes: [
                        Code {
                            code: "F401",
                            range: 8..12,
                        },
                        Code {
                            code: "F841",
                            range: 14..18,
                        },
                    ],
                },
            ),
        },
    ),
)
