crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_empty_comma_space.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: directive
---
Ok(
    Some(
        NoqaLexerOutput {
            warnings: [
                MissingItem(
                    13..14,
                ),
            ],
            directive: Codes(
                Codes {
                    range: 0..19,
                    codes: [
                        Code {
                            code: "F401",
                            range: 8..12,
                        },
                        Code {
                            code: "F841",
                            range: 15..19,
                        },
                    ],
                },
            ),
        },
    ),
)
