crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_invalid_suffix.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
snapshot_kind: text
---
Err(
    InvalidSuffix,
)
