crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_lex_codes.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: lex_codes(&source)
---
Ok(
    [
        Code {
            code: "F401",
            range: 1..5,
        },
        Code {
            code: "F402",
            range: 7..11,
        },
        Code {
            code: "F403",
            range: 11..15,
        },
    ],
)
