crates/ruff_linter/src/snapshots/ruff_linter__noqa__tests__noqa_names.snap
---
source: crates/ruff_linter/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Ok(
    Some(
        Codes(
            Codes {
                range: 0..38,
                codes: [
                    RuleIdent {
                        identifier: Name(
                            "unused-import",
                        ),
                        range: 8..21,
                    },
                    RuleIdent {
                        identifier: Name(
                            "unused-variable",
                        ),
                        range: 23..38,
                    },
                ],
            },
        ),
    ),
)
